--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       href="https://covid-19-tracker-4d67b.web.app/" 
       class="project"
       target="blank" data-type="front-end">
-      <img src="/img/covidApp.png" alt="" class="project__img">
+      <img src="/img/covid_app.png" alt="" class="project__img">
       <div class="project__desc">
         <h3>COVID-19 Tracker</h3>
         <span>COVID-19 app with Javascript, React, Web API to get data</span>
@@ -226,7 +226,7 @@
       href="https://airbnb-clone-b6648.web.app/" 
       class="project"
       target="blank" data-type="front-end">
-      <img src="/img/air-bnb sketch.png" alt="" class="project__img">
+      <img src="/img/airbnb_sketch.png" alt="" class="project__img">
       <div class="project__desc">
         <h3>Air Bnb Clone</h3>
         <span>Air Bnb Clone, using Javascript and React, with date range picker</span>
@@ -236,7 +236,7 @@
       href="https://hulu-clone-68b18.web.app/" 
       class="project"
       target="blank" data-type="front-end">
-      <img src="/img/HuluClone.png" alt="" class="project__img">
+      <img src="/img/hulu_clone.png" alt="" class="project__img">
       <div class="project__desc">
         <h3>Hulu Clone</h3>
         <span>Front-end Hulu Clone, using Javascript and React, using movie data API</span>
@@ -264,7 +264,7 @@
       </div>
     </div>
     <div class="project" data-type="design">
-      <img src="/img/sasuke+comp.png" alt="" class="project__img__3d">
+      <img src="/img/sasuke_comp.png" alt="" class="project__img__3d">
       <div class="project__desc">
         <h3>Sasuke Composition</h3>
         <span>Sasuke from different angles. <br>
@@ -272,7 +272,7 @@
       </div>
     </div>
     <div class="project" data-type="design">
-      <img src="/img/koreanSpiderman.png" alt="" class="project__img__3d">
+      <img src="/img/korean_spiderman.png" alt="" class="project__img__3d">
       <div class="project__desc">
         <h3>Korean Spiderman</h3>
         <span>Compiled Spider Man with Korean tradition mix. <br>
@@ -280,7 +280,7 @@
       </div>
     </div>
     <div class="project" data-type="design">
-      <img src="/img/fat cratos.png" alt="" class="project__img__3d">
+      <img src="/img/fat_cratos.png" alt="" class="project__img__3d">
       <div class="project__desc">
         <h3>Fat Kratos</h3>
         <span> Mix of Kratos and Defconn. <br>
