--- a/index.html
+++ b/index.html
@@ -15,24 +15,21 @@
 
 </head>
 
-<body >
+<body>
   <!-- Navbar -->
   <nav id="navbar">
     <div class="navbar__logo">
       <a href="#">
-        <img 
-        src="/img/bucket_kim.png"
-        alt=""
-        class="navbar__homeLogo">
+        <img src="/img/bucket_kim.png" alt="" class="navbar__homeLogo">
       </a>
     </div>
-      <ul class="navbar__menu">
-        <li class="navbar__menu__item" data-link="#home">HOME</li>
-        <li class="navbar__menu__item" data-link="#about">ABOUT</li>
-        <li class="navbar__menu__item" data-link="#skills">SKILLS</li>
-        <li class="navbar__menu__item" data-link="#works">WORKS</li>
-        <li class="navbar__menu__item" data-link="#contact">CONTACT</li>
-      </ul>
+    <ul class="navbar__menu">
+      <li class="navbar__menu__item" data-link="#home">HOME</li>
+      <li class="navbar__menu__item" data-link="#about">ABOUT</li>
+      <li class="navbar__menu__item" data-link="#skills">SKILLS</li>
+      <li class="navbar__menu__item" data-link="#works">WORKS</li>
+      <li class="navbar__menu__item" data-link="#contact">CONTACT</li>
+    </ul>
 
     <!-- toggle -->
     <button class="navbar__toggle-btn">
@@ -53,7 +50,10 @@
   <section id="about" class="section section__container">
     <h1>About Me</h1>
     <img src="/img/profile.jpeg" alt="" class="about__profile">
-    <p>	Brian came from a family of creativity, diligent, and humble mind Korean family, enthusiastic artist/designer and web developer. He has a life style of a dancer and martial artist. Currently Brian lives in New York, constantly searching for new inspirations to keep him creative. Living in New York got him to be more flexible in creative thinking, adapting to various environments, and able to take any challenges to solve problems.
+    <p> Brian came from a family of creativity, diligent, and humble mind Korean family, enthusiastic artist/designer
+      and web developer. He has a life style of a dancer and martial artist. Currently Brian lives in New York,
+      constantly searching for new inspirations to keep him creative. Living in New York got him to be more flexible in
+      creative thinking, adapting to various environments, and able to take any challenges to solve problems.
     </p>
     <div class="about__majors">
       <div class="major">
@@ -131,171 +131,162 @@
   <!-- works -->
   <section id="skills" class="section">
     <div class="section__container">
-    <h1>Skills</h1>
-    <h2>Skill & Attributes</h2>
-    <div class="skillAtt__desc">
-      <p>These are some of my personal skillsets that I put work on and will be developing them, as I go through the journey of a front-end, web developer. Passionate to learn new ways of developing, rather i'm writing in different language or use different library. Ability to work as a team, engage in communications with various people. Quickly adaptable and a fast learner. </p>
-    </div>
-    <div class="skillset">
-      <div class="skillset__left">
-        <h3 class="skillset__title">ProgrammingSkills</h3>
-        <div class="skill">
-          <div class="skill__level">
-            <span>Expert</span>
+      <h1>Skills</h1>
+      <h2>Skill & Attributes</h2>
+      <div class="skillAtt__desc">
+        <p>These are some of my personal skillsets that I put work on and will be developing them, as I go through the
+          journey of a front-end, web developer. Passionate to learn new ways of developing, rather i'm writing in
+          different language or use different library. Ability to work as a team, engage in communications with various
+          people. Quickly adaptable and a fast learner. </p>
+      </div>
+      <div class="skillset">
+        <div class="skillset__left">
+          <h3 class="skillset__title">ProgrammingSkills</h3>
+          <div class="skill">
+            <div class="skill__level">
+              <span>Expert</span>
+            </div>
+            <div class="skill__desc">
+              <span>
+                HTML, CSS, Javascript
+              </span>
+            </div>
           </div>
-          <div class="skill__desc">
-            <span>
-              HTML, CSS, Javascript
-            </span>
+          <hr>
+          <div class="skill">
+            <div class="skill__level">
+              <span>Moderate</span>
+            </div>
+            <div class="skill__desc">
+              <span>
+                React, Python
+              </span>
+            </div>
+          </div>
+          <hr>
+          <div class="skill">
+            <div class="skill__level">
+              <span>Novice</span>
+            </div>
+            <div class="skill__desc">
+              <span>
+                NodeJS, Firebase, MongoDB
+              </span>
+            </div>
           </div>
         </div>
-        <hr>
-        <div class="skill">
-          <div class="skill__level">
-            <span>Moderate</span>
+        <div class="skillset__right">
+          <div class="tools">
+            <h3 class="skillset__title">Tools</h3>
+            <ul class="tools__list">
+              <li><span>Visual Studio Code</span></li>
+              <li><span>React</span></li>
+              <li><span>Firebase</span></li>
+              <li><span>3D Programs</span></li>
+              <li><span>Adobe Programs</span></li>
+            </ul>
           </div>
-          <div class="skill__desc">
-            <span>
-              React, Python
-            </span>
-          </div>
-        </div>
-        <hr>
-        <div class="skill">
-          <div class="skill__level">
-            <span>Novice</span>
-          </div>
-          <div class="skill__desc">
-            <span>
-              NodeJS, Firebase, MongoDB
-            </span>
+          <div class="etc">
+            <h3 class="skillset__title">Other Skills</h3>
+            <ul class="etc__list">
+              <li><span>Custom Design</span></li>
+              <li><span>Dance</span></li>
+              <li><span>Martial Arts</span></li>
+            </ul>
           </div>
         </div>
       </div>
-      <div class="skillset__right">
-        <div class="tools">
-          <h3 class="skillset__title">Tools</h3>
-          <ul class="tools__list">
-            <li><span>Visual Studio Code</span></li>
-            <li><span>React</span></li>
-            <li><span>Firebase</span></li>
-            <li><span>3D Programs</span></li>
-            <li><span>Adobe Programs</span></li>
-          </ul>
-        </div>
-        <div class="etc">
-          <h3 class="skillset__title">Other Skills</h3>
-          <ul class="etc__list">
-            <li><span>Custom Design</span></li>
-            <li><span>Dance</span></li>
-            <li><span>Martial Arts</span></li>
-          </ul>
-        </div>
-      </div>
     </div>
-  </div>
   </section>
   <!-- blog -->
   <section id="works" class="section section__container">
     <section class="section__container">
       <h1>My Works</h1>
-    <h3>Projects</h3>
-    <div class="work__categories">
-      <button class="category__btn active" data-filter="*">
-        All<span class="category__count">9</span>
-      </button>
-      <button class="category__btn" data-filter="front-end">
-        Front-End<span class="category__count">3</span>
-      </button>
-      <button class="category__btn" data-filter="design">
-        Designs<span class="category__count">6</span>
-      </button>
-    </div>
-    <div class="work__projects">
-      <a 
-      href="https://covid-19-tracker-4d67b.web.app/" 
-      class="project"
-      target="blank" data-type="front-end">
-      <img src="/img/covid_app.png" alt="" class="project__img">
-      <div class="project__desc">
-        <h3>COVID-19 Tracker</h3>
-        <span>COVID-19 app with Javascript, React, Web API to get data</span>
+      <h3>Projects</h3>
+      <div class="work__categories">
+        <button class="category__btn active" data-filter="*">
+          All<span class="category__count">9</span>
+        </button>
+        <button class="category__btn" data-filter="front-end">
+          Front-End<span class="category__count">3</span>
+        </button>
+        <button class="category__btn" data-filter="design">
+          Designs<span class="category__count">6</span>
+        </button>
       </div>
-    </a>
-    <a 
-      href="https://airbnb-clone-b6648.web.app/" 
-      class="project"
-      target="blank" data-type="front-end">
-      <img src="/img/airbnb_sketch.png" alt="" class="project__img">
-      <div class="project__desc">
-        <h3>Air Bnb Clone</h3>
-        <span>Air Bnb Clone, using Javascript and React, with date range picker</span>
+      <div class="work__projects">
+        <a href="https://covid-19-tracker-4d67b.web.app/" class="project" target="blank" data-type="front-end">
+          <img src="/img/covid_app.png" alt="" class="project__img">
+          <div class="project__desc">
+            <h3>COVID-19 Tracker</h3>
+            <span>COVID-19 app with Javascript, React, Web API to get data</span>
+          </div>
+        </a>
+        <a href="https://airbnb-clone-b6648.web.app/" class="project" target="blank" data-type="front-end">
+          <img src="/img/airbnb_sketch.png" alt="" class="project__img">
+          <div class="project__desc">
+            <h3>Air Bnb Clone</h3>
+            <span>Air Bnb Clone, using Javascript and React, with date range picker</span>
+          </div>
+        </a>
+        <a href="https://hulu-clone-68b18.web.app/" class="project" target="blank" data-type="front-end">
+          <img src="/img/hulu_clone.png" alt="" class="project__img">
+          <div class="project__desc">
+            <h3>Hulu Clone</h3>
+            <span>Front-end Hulu Clone, using Javascript and React, using movie data API</span>
+          </div>
+        </a>
+
+        <!-- Image Designs -->
+        <a href="https://arvr.google.com/blocks/" class="project" target="blank" data-type="design">
+          <img src="/img/google_blocks.png" alt="" class="project__img">
+          <div class="project__desc">
+            <h3>Hulu Clone</h3>
+            <span>3D Artist project from Google Daydream App, Blocks</span>
+          </div>
+        </a>
+        <div class="project" data-type="design">
+          <img src="/img/korean_cafe.png" alt="" class="project__img__3d">
+          <div class="project__desc">
+            <h3>Traditional Cafe</h3>
+            <span>Inspired by traditional cafe. <br>
+              3D model, look dev, texturing</span>
+          </div>
+        </div>
+        <div class="project" data-type="design">
+          <img src="/img/sasuke_comp.png" alt="" class="project__img__3d">
+          <div class="project__desc">
+            <h3>Sasuke Composition</h3>
+            <span>Sasuke from different angles.
+              <br>
+              3D model, look dev, texturing</span>
+          </div>
+        </div>
+        <div class="project" data-type="design">
+          <img src="/img/korean_spiderman.png" alt="" class="project__img__3d">
+          <div class="project__desc">
+            <h3>Korean Spiderman</h3>
+            <span>Compiled Spider Man with Korean tradition mix. <br>
+              3D model, look dev, texturing</span>
+          </div>
+        </div>
+        <div class="project" data-type="design">
+          <img src="/img/fat_cratos.png" alt="" class="project__img__3d">
+          <div class="project__desc">
+            <h3>Fat Kratos</h3>
+            <span> Mix of Kratos and Defconn. <br>
+              3D model, look dev, texturing</span>
+          </div>
+        </div>
+        <div class="project" data-type="design">
+          <img src="/img/icecube.png" alt="" class="project__img__3d">
+          <div class="project__desc">
+            <h3>Ice Cube in ice cube</h3>
+            <span>Inspired by 2D drawing of Ice Cube. <br>
+              3D model, look dev, texturing</span>
+          </div>
+        </div>
       </div>
-    </a>
-    <a 
-      href="https://hulu-clone-68b18.web.app/" 
-      class="project"
-      target="blank" data-type="front-end">
-      <img src="/img/hulu_clone.png" alt="" class="project__img">
-      <div class="project__desc">
-        <h3>Hulu Clone</h3>
-        <span>Front-end Hulu Clone, using Javascript and React, using movie data API</span>
-      </div>
-    </a>
-    
-    <!-- Image Designs -->
-    <a 
-      href="https://arvr.google.com/blocks/" 
-      class="project"
-      target="blank"
-      data-type="design">
-      <img src="/img/google_blocks.png" alt="" class="project__img">
-      <div class="project__desc">
-        <h3>Hulu Clone</h3>
-        <span>3D Artist project from Google Daydream App, Blocks</span>
-      </div>
-    </a>
-    <div class="project" data-type="design">
-      <img src="/img/korean_cafe.png" alt="" class="project__img__3d">
-      <div class="project__desc">
-        <h3>Traditional Cafe</h3>
-        <span>Inspired by traditional cafe. <br>
-          3D model, look dev, texturing</span>
-      </div>
-    </div>
-    <div class="project" data-type="design">
-      <img src="/img/sasuke_comp.png" alt="" class="project__img__3d">
-      <div class="project__desc">
-        <h3>Sasuke Composition</h3>
-        <span>Sasuke from different angles. <br>
-          3D model, look dev, texturing</span>
-      </div>
-    </div>
-    <div class="project" data-type="design">
-      <img src="/img/korean_spiderman.png" alt="" class="project__img__3d">
-      <div class="project__desc">
-        <h3>Korean Spiderman</h3>
-        <span>Compiled Spider Man with Korean tradition mix. <br>
-          3D model, look dev, texturing</span>
-      </div>
-    </div>
-    <div class="project" data-type="design">
-      <img src="/img/fat_cratos.png" alt="" class="project__img__3d">
-      <div class="project__desc">
-        <h3>Fat Kratos</h3>
-        <span> Mix of Kratos and Defconn. <br>
-          3D model, look dev, texturing</span>
-      </div>
-    </div>
-    <div class="project" data-type="design">
-      <img src="/img/icecube.png" alt="" class="project__img__3d">
-      <div class="project__desc">
-        <h3>Ice Cube in ice cube</h3>
-        <span>Inspired by 2D drawing of Ice Cube. <br>
-          3D model, look dev, texturing</span>
-      </div>
-    </div>
-    </div>
     </section>
   </section>
   <!-- contact -->
