--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <div class="project" data-type="design">
           <img src="/img/icecube.png" alt="" class="project__img__3d">
           <div class="project__desc">
-            <h3>Ice Cube in ice cube</h3>
+            <h3>Ice Cube inside of ice cube</h3>
             <span>Inspired by 2D drawing of Ice Cube. <br>
               3D model, look dev, texturing</span>
           </div>
