--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Bucket Kim Web</title>
   <meta name="description" content="This is Brian's personal website for his personal build">
   <meta name="author" content="Brian">
-  <link rel="icon" type="image/png" href="/img/bucket_kim.png">
+  <link rel="icon" type="image/png" href="img/bucket_kim.png">
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/f031754653.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -20,7 +20,7 @@
   <nav id="navbar">
     <div class="navbar__logo">
       <a href="#">
-        <img src="/img/bucket_kim.png" alt="" class="navbar__homeLogo">
+        <img src="img/bucket_kim.png" alt="" class="navbar__homeLogo">
       </a>
     </div>
     <ul class="navbar__menu">
@@ -38,7 +38,7 @@
   </nav>
   <section id="home">
     <div class="home__container">
-      <img src="/img/home_title.png" alt="" class="home__main__title">
+      <img src="img/home_title.png" alt="" class="home__main__title">
       <div class="home__description">
         <h1>WEB DEVELOPER</h1>
         <h1>DESIGNER</h1>
@@ -49,7 +49,7 @@
   <!-- about -->
   <section id="about" class="section section__container">
     <h1>About Me</h1>
-    <img src="/img/profile.jpeg" alt="" class="about__profile">
+    <img src="img/profile.jpeg" alt="" class="about__profile">
     <p> Brian came from a family of creativity, diligent, and humble mind Korean family, enthusiastic artist/designer
       and web developer. He has a life style of a dancer and martial artist. Currently Brian lives in New York,
       constantly searching for new inspirations to keep him creative. Living in New York got him to be more flexible in
@@ -98,14 +98,14 @@
     </div>
     <class class="about__jobs">
       <div class="job__list">
-        <img src="/img/wayfair.jpg" alt="" class="job__logo">
+        <img src="img/wayfair.jpg" alt="" class="job__logo">
         <div class="job__desc">
           <p class="job__name">Worked at Wayfair as 3D Artist</p>
           <p class="job__period">2018 April -2019 May</p>
         </div>
       </div>
       <div class="job__list">
-        <img src="/img/google.png" alt="" class="job__logo">
+        <img src="img/google.png" alt="" class="job__logo">
         <div class="job__desc">
           <p class="job__name">Worked with Daydream Team as 3D Artist</p>
           <p class="job__period">2017 May -2017 August</p>
@@ -113,14 +113,14 @@
       </div>
       <div class="job__list">
 
-        <img src="/img/google.png" alt="" class="job__logo">
+        <img src="img/google.png" alt="" class="job__logo">
         <div class="job__desc">
           <p class="job__name">Worked on VR app at Google as 3D Artist</p>
           <p class="job__period">2016 July -2017 January</p>
         </div>
       </div>
       <div class="job__list">
-        <img src="/img/themolecule.png" alt="" class="job__logo">
+        <img src="img/themolecule.png" alt="" class="job__logo">
         <div class="job__desc">
           <p class="job__name">Worked at The Molecule as 3D Generalist</p>
           <p class="job__period">2016 January -2016 Februrary</p>
@@ -216,21 +216,21 @@
       </div>
       <div class="work__projects">
         <a href="https://covid-19-tracker-4d67b.web.app/" class="project" target="blank" data-type="front-end">
-          <img src="/img/covid_app.png" alt="" class="project__img">
+          <img src="img/covid_app.png" alt="" class="project__img">
           <div class="project__desc">
             <h3>COVID-19 Tracker</h3>
             <span>COVID-19 app with Javascript, React, Web API to get data</span>
           </div>
         </a>
         <a href="https://airbnb-clone-b6648.web.app/" class="project" target="blank" data-type="front-end">
-          <img src="/img/airbnb_sketch.png" alt="" class="project__img">
+          <img src="img/airbnb_sketch.png" alt="" class="project__img">
           <div class="project__desc">
             <h3>Air Bnb Clone</h3>
             <span>Air Bnb Clone, using Javascript and React, with date range picker</span>
           </div>
         </a>
         <a href="https://hulu-clone-68b18.web.app/" class="project" target="blank" data-type="front-end">
-          <img src="/img/hulu_clone.png" alt="" class="project__img">
+          <img src="img/hulu_clone.png" alt="" class="project__img">
           <div class="project__desc">
             <h3>Hulu Clone</h3>
             <span>Front-end Hulu Clone, using Javascript and React, using movie data API</span>
@@ -239,14 +239,14 @@
 
         <!-- Image Designs -->
         <a href="https://arvr.google.com/blocks/" class="project" target="blank" data-type="design">
-          <img src="/img/google_blocks.png" alt="" class="project__img">
+          <img src="img/google_blocks.png" alt="" class="project__img">
           <div class="project__desc">
             <h3>Hulu Clone</h3>
             <span>3D Artist project from Google Daydream App, Blocks</span>
           </div>
         </a>
         <div class="project" data-type="design">
-          <img src="/img/korean_cafe.png" alt="" class="project__img__3d">
+          <img src="img/korean_cafe.png" alt="" class="project__img__3d">
           <div class="project__desc">
             <h3>Traditional Cafe</h3>
             <span>Inspired by traditional cafe. <br>
@@ -254,7 +254,7 @@
           </div>
         </div>
         <div class="project" data-type="design">
-          <img src="/img/sasuke_comp.png" alt="" class="project__img__3d">
+          <img src="img/sasuke_comp.png" alt="" class="project__img__3d">
           <div class="project__desc">
             <h3>Sasuke Composition</h3>
             <span>Sasuke from different angles.
@@ -263,7 +263,7 @@
           </div>
         </div>
         <div class="project" data-type="design">
-          <img src="/img/korean_spiderman.png" alt="" class="project__img__3d">
+          <img src="img/korean_spiderman.png" alt="" class="project__img__3d">
           <div class="project__desc">
             <h3>Korean Spiderman</h3>
             <span>Compiled Spider Man with Korean tradition mix. <br>
@@ -271,7 +271,7 @@
           </div>
         </div>
         <div class="project" data-type="design">
-          <img src="/img/fat_cratos.png" alt="" class="project__img__3d">
+          <img src="img/fat_cratos.png" alt="" class="project__img__3d">
           <div class="project__desc">
             <h3>Fat Kratos</h3>
             <span> Mix of Kratos and Defconn. <br>
@@ -279,7 +279,7 @@
           </div>
         </div>
         <div class="project" data-type="design">
-          <img src="/img/icecube.png" alt="" class="project__img__3d">
+          <img src="img/icecube.png" alt="" class="project__img__3d">
           <div class="project__desc">
             <h3>Ice Cube inside of ice cube</h3>
             <span>Inspired by 2D drawing of Ice Cube. <br>
