--- a/index.html
+++ b/index.html
@@ -205,16 +205,23 @@
       <h3>Projects</h3>
       <div class="work__categories">
         <button class="category__btn active" data-filter="*">
-          All<span class="category__count">9</span>
+          All<span class="category__count">10</span>
         </button>
         <button class="category__btn" data-filter="front-end">
-          Front-End<span class="category__count">3</span>
+          Front-End<span class="category__count">4</span>
         </button>
         <button class="category__btn" data-filter="design">
           Designs<span class="category__count">6</span>
         </button>
       </div>
       <div class="work__projects">
+        <a href="https://nervous-saha-e478c7.netlify.app/" class="project" target="blank" data-type="front-end">
+          <img src="img/amazon_cart.png" alt="" class="project__img">
+          <div class="project__desc">
+            <h3>Amazon Cart</h3>
+            <span>Amazon Cart Cclone with React</span>
+          </div>
+        </a>
         <a href="https://covid-19-tracker-4d67b.web.app/" class="project" target="blank" data-type="front-end">
           <img src="img/covid_app.png" alt="" class="project__img">
           <div class="project__desc">
