--- a/index.html
+++ b/index.html
@@ -248,19 +248,19 @@
         <a href="https://arvr.google.com/blocks/" class="project" target="blank" data-type="design">
           <img src="img/google_blocks.png" alt="" class="project__img">
           <div class="project__desc">
-            <h3>Hulu Clone</h3>
+            <h3>Google Blocks</h3>
             <span>3D Artist project from Google Daydream App, Blocks</span>
           </div>
         </a>
-        <div class="project" data-type="design">
-          <img src="img/korean_cafe.png" alt="" class="project__img__3d">
+        <div class="project" data-type="design" id="myImg">
+          <img src="img/korean_cafe.png" alt="" class="project__img__3d" >
           <div class="project__desc">
             <h3>Traditional Cafe</h3>
             <span>Inspired by traditional cafe. <br>
               3D model, look dev, texturing</span>
           </div>
         </div>
-        <div class="project" data-type="design">
+        <div class="project" data-type="design" id="myImg">
           <img src="img/sasuke_comp.png" alt="" class="project__img__3d">
           <div class="project__desc">
             <h3>Sasuke Composition</h3>
@@ -269,7 +269,7 @@
               3D model, look dev, texturing</span>
           </div>
         </div>
-        <div class="project" data-type="design">
+        <div class="project" data-type="design" id="myImg">
           <img src="img/korean_spiderman.png" alt="" class="project__img__3d">
           <div class="project__desc">
             <h3>Korean Spiderman</h3>
@@ -277,7 +277,7 @@
               3D model, look dev, texturing</span>
           </div>
         </div>
-        <div class="project" data-type="design">
+        <div class="project" data-type="design" id="myImg">
           <img src="img/fat_cratos.png" alt="" class="project__img__3d">
           <div class="project__desc">
             <h3>Fat Kratos</h3>
@@ -285,7 +285,7 @@
               3D model, look dev, texturing</span>
           </div>
         </div>
-        <div class="project" data-type="design">
+        <div class="project" data-type="design" id="myImg">
           <img src="img/icecube.png" alt="" class="project__img__3d">
           <div class="project__desc">
             <h3>Ice Cube inside of ice cube</h3>
@@ -293,6 +293,7 @@
               3D model, look dev, texturing</span>
           </div>
         </div>
+        
       </div>
     </section>
   </section>
