fixed some website link

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             </div>
           </a>
           <a
-            href="https://nervous-saha-e478c7.netlify.app/"
+            href="https://amazon-cart-bk.netlify.app/"
             class="project"
             target="blank"
             data-type="front-end"
@@ -289,17 +289,18 @@
             </div>
           </a>
           <a
-            href="https://hulu-clone-68b18.web.app/"
+            href="https://netflix-clone-bk.netlify.app/login.html"
             class="project"
             target="blank"
             data-type="front-end"
           >
-            <img src="img/hulu_clone.png" alt="" class="project__img" />
+            <img src="img/netflix-clone.png" alt="" class="project__img" />
             <div class="project__desc">
               <h3>Hulu Clone</h3>
               <span
-                >Front-end Hulu Clone, using Javascript and React, using movie
-                data API</span
+                >Full Stack Netflix clone using tmdb to get updated movie
+                posters, MongoDB to keep users data, login logout functional web
+                page</span
               >
             </div>
           </a>
