--- a/index.html
+++ b/index.html
@@ -294,9 +294,13 @@
             target="blank"
             data-type="front-end"
           >
-            <img src="img/netflix-clone.png" alt="" class="project__img" />
+            <img
+              src="img/netflix-clone-window.png"
+              alt=""
+              class="project__img"
+            />
             <div class="project__desc">
-              <h3>Hulu Clone</h3>
+              <h3>Netflix Clone</h3>
               <span
                 >Full Stack Netflix clone using tmdb to get updated movie
                 posters, MongoDB to keep users data, login logout functional web
