another web projected added

--- a/index.html
+++ b/index.html
@@ -213,16 +213,31 @@
         <h3>Projects</h3>
         <div class="work__categories">
           <button class="category__btn active" data-filter="*">
-            All<span class="category__count">12</span>
+            All<span class="category__count">13</span>
           </button>
           <button class="category__btn" data-filter="front-end">
-            Front-End<span class="category__count">6</span>
+            Front-End<span class="category__count">7</span>
           </button>
           <button class="category__btn" data-filter="design">
             Designs<span class="category__count">6</span>
           </button>
         </div>
         <div class="work__projects">
+          <a
+            href="https://disney-plus-bk.web.app/"
+            class="project"
+            target="blank"
+            data-type="front-end"
+          >
+            <img src="img/disneyplusclone.png" alt="" class="project__img" />
+            <div class="project__desc">
+              <h3>Disney Plus Clone</h3>
+              <span
+                >Front End Disney Clone app built with React JS, Redux, deported
+                through firebase.</span
+              >
+            </div>
+          </a>
           <a
             href="https://movie-rate-bk.netlify.app/"
             class="project"
