added another project to a website

--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
       <h1>About Me</h1>
       <img src="img/profile.jpeg" alt="" class="about__profile" />
       <p>
-        Brian came from a family of creativity, diligent, and humble mind Korean
-        family, enthusiastic artist/designer and web developer. He has a life
-        style of a dancer and martial artist. Currently Brian lives in New York,
-        constantly searching for new inspirations to keep him creative. Living
-        in New York got him to be more flexible in creative thinking, adapting
-        to various environments, and able to take any challenges to solve
-        problems.
+        Brian came from a family of creativity, diligent, and humble minded
+        Korean family. He is an enthusiastic artist/designer and web developer.
+        Currently Brian lives in New York,constantly searching for new
+        inspirations to expand his creativity. Living in New York City got him
+        to imagine and think creatively, adapting to various environments
+        easily, and take any challenges to solve any problems. He is creative
+        and logical thinker.
       </p>
       <div class="about__majors">
         <div class="major">
@@ -213,16 +213,31 @@
         <h3>Projects</h3>
         <div class="work__categories">
           <button class="category__btn active" data-filter="*">
-            All<span class="category__count">13</span>
+            All<span class="category__count">14</span>
           </button>
           <button class="category__btn" data-filter="front-end">
-            Front-End<span class="category__count">7</span>
+            Front-End<span class="category__count">8</span>
           </button>
           <button class="category__btn" data-filter="design">
             Designs<span class="category__count">6</span>
           </button>
         </div>
         <div class="work__projects">
+          <a
+            href="https://bk-first-scene.netlify.app/"
+            class="project"
+            target="blank"
+            data-type="front-end"
+          >
+            <img src="img/3D_Portal.png" alt="" class="project__img" />
+            <div class="project__desc">
+              <h3>3D Portal Scene</h3>
+              <span
+                >3D scene made with blender, front end used with THREE JS, Web
+                GL</span
+              >
+            </div>
+          </a>
           <a
             href="https://disney-plus-bk.web.app/"
             class="project"
